frostillicus-blog/frostillicus-blog-j2ee/src/main/webapp/css/style.css
/**
 * Copyright © 2016-2018 Jesse Gallagher
 *
 * Licensed under the Apache License, Version 2.0 (the "License");
 * you may not use this file except in compliance with the License.
 * You may obtain a copy of the License at
 *
 *     http://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
 */
 
* {
	box-sizing: border-box;
}
 
body, html {
	background-color: rgb(56, 83, 136);
	padding: 0;
	margin: 0;
}
a {
	color: rgb(51, 85, 136);
}

#entirety {
	display: grid;
	grid-gap: 0;
	grid-template-areas: "header" "nav" "content" "footer";
	
	border: 1px solid black;
	
	font-family: "Georgia", serif;
}

#pageheader {
	grid-area: header;
	font-size: 2em;
}
#pageheader a {
	text-decoration: none;
	color: black;
}

#pagenav {
	grid-area: nav;
	
	background-color: rgb(238, 238, 221);
	padding: 0.5em;
	
	color: rgb(101, 101, 84);
	font-size: 0.95em;
	line-height: 1.7em;
}
#pagenav ul[title]:before {
	content: attr(title);
	display: block;
	width: 100%;
	border-bottom: 1px dotted rgb(101, 101, 84);
}
#pagenav li {
	display: inline;
}
#pagenav a {
	display: list-item;
	list-style-type: square;
}
#pagenav .photo {
	max-width: 100%;
	display: block;
	margin: 0 auto;
}

#pagebody {
	grid-area: content;
	
	background-color: white;
	padding: 1em;
}

.post header {
	border-bottom: 1px dotted rgb(96, 96, 96);
	position: relative;
}
.post header h2 {
	font-size: 1.5em;
	color: rgb(57, 82, 107);
	margin-bottom: 0;
}
.post header h2 a {
	color: rgb(57, 82, 107);
	text-decoration: none;
}
.post header h3, .comment > h3 {
	font-size: 0.9em;
	color: rgb(128, 128, 128);
	margin-top: 0;
	margin-bottom: 0.5em;
}

.post > .admin {
	position: absolute;
	top: 0;
	right: 0;
}
.post .admin form {
	display: inline;
}
.post .admin input[type='submit'], .post .admin a {
	border: 0;
	background: transparent;
	font-size: 1em;
	display: inline-block;
	padding: 0 0.25em;
	text-decoration: none;
}
.post pre {
	max-width: 50vw;
	overflow-x: auto;
	border: 1px solid #ccc;
	background: #fefefe;
	padding: 0.5em;
}


.meta, .meta a {
	font-size: 0.9em;
	color: grey;
}

.post + .post {
	margin-top: 2em;
}

.post .thread {
	border: 1px solid lightblue;
	padding: 0;
	padding-bottom: 0.5em;
}
.post .thread:before {
	display: block;
	content: attr(title);
	padding: 0.5em;
	border-bottom: 1px solid lightblue;
	background-color: rgba(0, 0, 128, 0.05);
	margin-bottom: 0.5em;
}
.post .thread li {
	margin-left: 2em;
	line-height: 1.4;
}

.comment {
	display: grid;
}

.comment .photo {
	grid-area: photo;
	max-width: 48px;
}
.comment > h3 {
	grid-area: title;
}
.comment > .admin {
	grid-area: admin;
	text-align: right;
}
.comment > .comment-body {
	grid-area: content;
}

#pagefooter {
	grid-area: footer;
	
	color: rgb(56, 75, 97);
	text-align: center;
}
#pagefooter a {
	color: rgb(56, 75, 97);
}

input:invalid {
	border-color: red;
}

.admin-console {
	border: 0;
	width: 100%;
	height: 900px;
}


@media ( max-width: 699px) {
	#entirety {
		max-width: 100%;
	}
	#pageheader {
		background-color: rgb(204, 221, 204);
	}
	#pagefooter {
		padding: 0.5em;
		background-color: rgb(111, 149, 208);
	}
	
	
	.comment {
		grid-template-columns: 5fr 1fr;
		grid-template-areas:
			"title admin"
			"content content";
	}
	
	.comment .photo {
		display: none;
	}
}
@media ( min-width : 700px) {
	#entirety {
		width: 80%;
		margin: 2em auto;
		grid-template-columns: 1fr 5fr;
		grid-template-areas:
			"header header"
			"nav    content"
			"nav    content"
			"footer footer";
	}
	#pageheader {
		display: grid;
		grid-template-columns: 1fr 5fr;
		grid-template-areas: "padding link";
		background-color: rgb(187, 204, 187);
	}
	#pageheader a {
		grid-area: link;
		display: block;
		padding: 0.5em;
		background-color: rgb(204, 221, 204);
	}
	
	.post .body {
		margin-left: 3em;
		max-width: 100%;
	}
	.post img {
		max-width: 100%;
	}
	
	.comment {
		grid-template-columns: 52px 6fr 1fr;
		grid-template-areas:
			"photo title admin"
			"photo content content";
	}
	
	#pagefooter {
		display: grid;
		grid-template-columns: 1fr 5fr;
		grid-template-areas: "padding text";
		background-color: rgb(105, 140, 182);
	}
	#pagefooter p {
		grid-area: text;
		padding: 0.5em;
		background-color: rgb(111, 149, 208);
		margin: 0;
	}
}

